去除无效的类